prototypes/p3b/tests/invalid/10_demeter_deep_chain.hll
// MUST GENERATE WARNING: Law of Demeter violation (chain > 2 levels)

type ZipCode = String

struct City {
    ZipCode zip
}

struct Address {
    City city
}

struct Customer {
    Address address
}

struct Order {
    Customer customer
}

function getZip(Order order) -> ZipCode {
    order.customer.address.city.zip  // WARNING: chain depth 4 exceeds max 2
}
